# serenity

Userland/Games/: CMakeLists.txt
Userland/Games/Durak/: CMakeLists.txt  Durak.gml  Game.cpp  Game.h  main.cpp
Userland/Games/Spider/: Game.cpp
